--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ locale                   : "en-US"
 site_theme               : "default"
 title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
+name                     : &name "Giuliana Ghia"
+description              : &description "Ciao! I am a second-year Ph.D. in Economics at <a href="https://www.su.se/english/profiles/gigh6797-1.661797">Stockholm University</a> and a Research Assistant at the <a href="https://www.su.se/institute-for-international-economic-studies/">Institute for International Economic Studies</a> (IIES). I am interested in understanding how culture and identity shape people’s economic and social behavior, with a specific focus on the evolution of social norms and human capital investments in both developed and developing settings. I earned a MSc in Economic and Social Sciences from <a href="https://www.unibocconi.it/en">Bocconi University</a> and a MRes in Economics from the <a href="https://www.eui.eu/en/academic-units/department-of-economics">European University Institute</a>. Prior to starting my Ph.D., I worked for several years as a Field Coordinator for ERC and J-PAL funded RCTs in the domain of development and education.
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
