--- a/_config.yml
+++ b/_config.yml
@@ -12,32 +12,32 @@ site_theme               : "default"
 title                    : "Your Name / Site Title"
 title_separator          : "-"
 name                     : &name "Giuliana Ghia"
-description              : &description "Ciao! I am a second-year Ph.D. in Economics at <a href="https://www.su.se/english/profiles/gigh6797-1.661797">Stockholm University</a> and a Research Assistant at the <a href="https://www.su.se/institute-for-international-economic-studies/">Institute for International Economic Studies</a> (IIES). I am interested in understanding how culture and identity shape people’s economic and social behavior, with a specific focus on the evolution of social norms and human capital investments in both developed and developing settings. I earned a MSc in Economic and Social Sciences from <a href="https://www.unibocconi.it/en">Bocconi University</a> and a MRes in Economics from the <a href="https://www.eui.eu/en/academic-units/department-of-economics">European University Institute</a>. Prior to starting my Ph.D., I worked for several years as a Field Coordinator for ERC and J-PAL funded RCTs in the domain of development and education.
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+description              : &description "Ph.D. student at Stockholm University "
+url                      : https://giulianaghia.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "giulianaghia/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile-picture.jpeg"
+  name             : "Giuliana Ghia"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Ph.D. Student"
+  location         : "Stockholm, Sweden"
+  employer         : 
   uri              : # URL
-  email            : "none@example.org" 
+  email            :  
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : #"https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #"http://orcid.org/yourorcidurl"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
   scopus           : # URL
 
@@ -45,7 +45,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "giulianaghia"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
