--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Giuliana Ghia"
 title_separator          : "-"
 name                     : &name "Giuliana Ghia"
 description              : &description "Ph.D. student at Stockholm University "
